--- a/index.html
+++ b/index.html
@@ -98,15 +98,16 @@
                 
 
                 <div class="hero-actions">
-                  <a href="#portfolio" class="btn btn-primary">View My Work</a>
-                  <a href="#contact" class="btn btn-outline">Get In Touch</a>
+                  <a href="#contact" class="btn btn-primary">Hire Me for IT Services</a>
+                  <a href="#blogs" class="btn btn-outline">Explore Blogs</a>
                 </div>
 
                 <div class="social-links">
-                  <a href="#"><i class="bi bi-dribbble"></i></a>
-                  <a href="#"><i class="bi bi-behance"></i></a>
-                  <a href="#"><i class="bi bi-github"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/in/iamreemaroy/"><i class="bi bi-linkedin"></i></a>
+                  <a href="https://www.youtube.com/@iamreemaroy"><i class="bi bi-youtube"></i></a>
+                  <a href="https://www.instagram.com/iamreemaroyy"><i class="bi bi-instagram"></i></a>
+                  <a href="https://x.com/iamreemaroy"><i class="bi bi-x"></i></a>
+                  <a href="https://linktr.ee/iamreemaroy"><i class="bi bi-linktree"></i></a>
                 </div>
               </div>
             </div>
