--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
               <div class="hero-text">
                 <h1>Reema<span class="accent-text">Roy</span></h1>
                 <p class="lead">I'm a <span class="typed" data-typed-items="Technical Project Manager, IT Consultant, Website Developer, Digital Creator"></span></p>
-                <p class="description">Helping businesses scale with secure IT solutions</p>
-                <p class="description">& helping people discover smarter tech, skincare & travel choices.</p>
+                <p class="description">Helping businesses scale with secure IT solutions
+                <br>& helping people discover smarter tech, skincare & travel choices.</p>
                 
 
                 <div class="hero-actions">
