--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Reema Roy | IT Consultant, Website Developer & Digital Creator</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Reema Roy provides IT consulting, data migration, website development, and shares trusted skincare, travel & tech     recommendations through blogs and YouTube.">
+  <meta name="author" content="Reema Roy">
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+
+  <!-- CANONICAL -->
+  <link rel="canonical" href="https://www.reemaroy.com/">
+
+  <!-- OPEN GRAPH -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Reema Roy | IT Consultant & Digital Creator">
+  <meta property="og:description" content="IT consulting, website development, and trusted skincare, travel & tech recommendations by Reema Roy.">
+  <meta property="og:url" content="https://www.reemaroy.com/">
+  <meta property="og:image" content="https://www.reemaroy.com/assets/img/profile/profile-2.webp">
+  <meta property="og:site_name" content="Reema Roy">
+  
+  <!-- TWITTER -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Reema Roy | IT Consultant & Digital Creator">
+  <meta name="twitter:description" content="IT consulting, data migration, website development & lifestyle recommendations.">
+  <meta name="twitter:image" content="https://www.reemaroy.com/assets/img/profile/profile-2.webp">
+
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
