--- a/index.html
+++ b/index.html
@@ -46,6 +46,31 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+
+  <!-- Person schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Reema Roy",
+    "url": "https://www.reemaroy.com",
+    "image": "https://www.reemaroy.com/assets/img/profile/profile-2.webp",
+    "sameAs": [
+      "https://www.youtube.com/@iamreemaroy",
+      "https://www.linkedin.com/in/iamreemaroy/",
+      "https://www.instagram.com/iamreemaroyy",
+      "https://x.com/iamreemaroy"
+      "https://linktr.ee/iamreemaroy"
+    ],
+    "jobTitle": "Technical Project Manager & IT Consultant & Digital Creator",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "Reema Roy"
+    },
+    "description": "Technical Project Manager, IT consultant, website developer and digital creator sharing tech, skincare and travel insights."
+  }
+</script>
+
 </head>
 
 <body class="index-page">
