--- a/index.html
+++ b/index.html
@@ -71,6 +71,21 @@
   }
 </script>
 
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Reema Roy",
+    "url": "https://www.reemaroy.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.reemaroy.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+
 </head>
 
 <body class="index-page">
