--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                   <a href="https://www.youtube.com/@iamreemaroy"><i class="bi bi-youtube"></i></a>
                   <a href="https://www.instagram.com/iamreemaroyy"><i class="bi bi-instagram"></i></a>
                   <a href="https://x.com/iamreemaroy"><i class="bi bi-x"></i></a>
-                  <a href="https://linktr.ee/iamreemaroy"><i class="bi bi-linktree"></i></a>
+                  <a href="https://linktr.ee/iamreemaroy"><i class="bi bi-cart4"></i></a>
                 </div>
               </div>
             </div>
