--- a/index.html
+++ b/index.html
@@ -122,12 +122,12 @@
         </ul>
       </nav>
 
-      <div class="social-links text-center">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <div class="social-links text-center">        
+        <a href="https://www.linkedin.com/in/iamreemaroy/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.youtube.com/@iamreemaroy" class="google-plus"><i class="bi bi-youtube"></i></a>
+        <a href="https://www.instagram.com/iamreemaroyy" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://x.com/iamreemaroy" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="https://linktr.ee/iamreemaroy" class="facebook"><i class="bi bi-facebook"></i></a>
       </div>
 
     </div>
@@ -166,7 +166,7 @@
                   <a href="https://www.linkedin.com/in/iamreemaroy/"><i class="bi bi-linkedin"></i></a>
                   <a href="https://www.youtube.com/@iamreemaroy"><i class="bi bi-youtube"></i></a>
                   <a href="https://www.instagram.com/iamreemaroyy"><i class="bi bi-instagram"></i></a>
-                  <a href="https://x.com/iamreemaroy"><i class="bi bi-x"></i></a>
+                  <a href="https://x.com/iamreemaroy"><i class="bi bi-twitter-x"></i></a>
                   <a href="https://linktr.ee/iamreemaroy"><i class="bi bi-cart4"></i></a>
                 </div>
               </div>
