--- a/index.html
+++ b/index.html
@@ -234,14 +234,28 @@
               </div>
 
               <div class="description">
-                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-
-                <p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</p>
+                <p>I am a Technical Project Manager with 5+ years of experience leading SaaS, ERP, and CMS projects — from discovery to launch — while aligning product, engineering, and business teams.</p>
+                <p>Currently, I am leading end-to-end delivery initiatives in EdTech, working closely with cross-functional teams (UX, development, content, QA) to build scalable learning platforms that improve student and organization outcomes.</p>
+                <p>My strength lies in converting complex, unclear requirements into structured roadmaps — ensuring faster delivery, measurable impact, and seamless adoption.</p>
+                <p>What I bring:
+                  <li>Project planning, sprint management & stakeholder communication</li>
+                  <li>Onboarding, implementation & process standardization</li>
+                  <li>Team leadership across engineering, UX, and content streams</li>
+                  <li>Data-driven decisions, risk control, and delivery accountability</li>
+                </p>
+                <p>Career Highlights:
+                  <li>Successfully managed multiple ERP/CMS rollouts and onboarding programs</li>
+                  <li>Led cross-functional teams and improved operational efficiency</li>
+                  <li>Built processes that reduced training and delivery cycles</li>
+                </p>
+                <p>I’m passionate about building digital solutions that scale — especially in media, education, SaaS, and product environments.</p>
+                <p>Always open to learning, collaborating, and contributing to impactful technology initiatives.</p>
+                
               </div>
 
               <div class="stats-grid">
                 <div class="stat-item">
-                  <div class="stat-number">150+</div>
+                  <div class="stat-number">180+</div>
                   <div class="stat-label">Projects Completed</div>
                 </div>
                 <div class="stat-item">
@@ -258,7 +272,7 @@
                 <div class="detail-row">
                   <div class="detail-item">
                     <span class="detail-label">Specialization</span>
-                    <span class="detail-value">UI/UX Design &amp; Development</span>
+                    <span class="detail-value">Project Management & Development</span>
                   </div>
                   <div class="detail-item">
                     <span class="detail-label">Experience Level</span>
@@ -268,11 +282,11 @@
                 <div class="detail-row">
                   <div class="detail-item">
                     <span class="detail-label">Education</span>
-                    <span class="detail-value">Computer Science, MIT</span>
+                    <span class="detail-value">Master of Public Administration, IGNOU</span>
                   </div>
                   <div class="detail-item">
                     <span class="detail-label">Languages</span>
-                    <span class="detail-value">English, Spanish, French</span>
+                    <span class="detail-value">English, Hindi</span>
                   </div>
                 </div>
               </div>
