--- a/index.html
+++ b/index.html
@@ -205,21 +205,21 @@
               </div>
 
               <div class="profile-content">
-                <h3>Marcus Thompson</h3>
-                <p class="profession">Creative Director &amp; Developer</p>
+                <h3>Reema Roy</h3>
+                <p class="profession">Project Manager and Content Creator</p>
 
                 <div class="contact-links">
                   <a href="mailto:marcus@example.com" class="contact-item">
                     <i class="bi bi-envelope"></i>
-                    marcus@example.com
+                    royreema1997@gmail.com
                   </a>
                   <a href="tel:+15551234567" class="contact-item">
                     <i class="bi bi-telephone"></i>
-                    +1 (555) 123-4567
+                    +91 9210481163
                   </a>
                   <a href="#" class="contact-item">
                     <i class="bi bi-geo-alt"></i>
-                    San Francisco, CA
+                    Hyderabad, Telangana, India
                   </a>
                 </div>
               </div>
