--- a/index.html
+++ b/index.html
@@ -356,16 +356,17 @@
 
     </section><!-- /Stats Section -->
 
+    
     <!-- Skills Section -->
-    <section id="skills" class="skills section">
+<!--   <section id="skills" class="skills section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+<!--      <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
+<!--      <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row">
           <div class="col-lg-6">
@@ -408,7 +409,7 @@
             </div><!-- End Frontend Skills -->
           </div>
 
-          <div class="col-lg-6">
+ <!--         <div class="col-lg-6">
             <div class="skills-category" data-aos="fade-up" data-aos-delay="300">
               <h3>Back-end Development</h3>
               <div class="skills-animation">
@@ -446,10 +447,10 @@
                 </div>
               </div>
             </div><!-- End Backend Skills -->
-          </div>
-        </div>
+<!--          </div>
+<!--        </div>
 
-      </div>
+<!--      </div>
 
     </section><!-- /Skills Section -->
 
