--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Technical Project Manager | 5+ Years in SaaS Delivery | Leading Cross-Functional Teams | ERP/CMS Implementations | Driving Delivery & Adoption</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -474,56 +474,32 @@
               </div>
 
               <h3>Professional Summary</h3>
-              <p>Driven software architect with expertise in developing scalable, high-performance enterprise solutions. Passionate about leveraging cutting-edge technologies to solve complex business challenges.</p>
+              <p>SaaS-focused Project Manager certified in Project Management Skills for Leaders (LinkedIn Learning), with 7+ years of experience driving end-to-end product delivery, customer success, and transformation initiatives across global clients in the India, USA, UK, Singapore, Canada, and APAC regions. Expert in aligning technical execution with business goals, leading Agile teams, and optimizing SaaS operations across enterprise-scale environments.</p>
+              <p><b>Tech Stack:</b> AWS, Jira, Confluence, Salesforce, WordPress, Shopify, Freshdesk, Cloudflare, Asana, Trello</p>
 
               <h3 class="mt-4">Contact Information</h3>
               <ul class="contact-info list-unstyled">
-                <li><i class="bi bi-geo-alt"></i> 742 Evergreen Terrace, Springfield, MA 02101</li>
-                <li><i class="bi bi-envelope"></i> contact@example.com</li>
-                <li><i class="bi bi-phone"></i> +1 (555) 123-4567</li>
-                <li><i class="bi bi-linkedin"></i> linkedin.com/in/example</li>
+                <li><i class="bi bi-geo-alt"></i>  Hyderabad, Telangana, India</li>
+                <li><i class="bi bi-envelope"></i>  royreema1997@gmail.com</li>
+                <li><i class="bi bi-phone"></i>  +919210481163</li>
+                <li><i class="bi bi-linkedin"></i>  linkedin.com/in/iamreemaroy</li>
               </ul>
 
               <div class="skills-animation mt-4">
-                <h3>Technical Skills</h3>
-                <div class="skill-item">
-                  <div class="d-flex justify-content-between">
-                    <span>Web Development</span>
-                    <span>95%</span>
-                  </div>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <div class="d-flex justify-content-between">
-                    <span>UI/UX Design</span>
-                    <span>85%</span>
-                  </div>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <div class="d-flex justify-content-between">
-                    <span>Cloud Architecture</span>
-                    <span>90%</span>
-                  </div>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                </div>
-
-                <div class="skill-item">
-                  <div class="d-flex justify-content-between">
-                    <span>Project Management</span>
-                    <span>80%</span>
-                  </div>
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
+                <h3>Core Competencies</h3>
+                  <ul class="contact-info list-unstyled">
+                    <li>SaaS Project &amp; Program Management (SDLC)</li>
+                    <li>Product Lifecycle &amp; Release Management </li>
+                    <li>Customer Success &amp; Retention Strategy </li>
+                    <li>Stakeholder &amp; Client Relationship Management</li>
+                    <li>Agile Delivery &amp; Sprint Planning</li>
+                    <li>Global Cross-Functional Team Leadership</li>
+                    <li>Platform Scalability &amp; Implementation</li>
+                    <li>Process Automation &amp; Operational Excellence</li>
+                    <li>Global Stakeholder Engagement</li>
+                    <li>Governance, Risk &amp; Compliance (GRC) Management</li>
+                    <li>Strategic Planning &amp; Execution  </li>
+                </ul>
                 </div>
               </div>
             </div>
