--- a/index.html
+++ b/index.html
@@ -500,7 +500,16 @@
                     <li>Governance, Risk &amp; Compliance (GRC) Management</li>
                     <li>Strategic Planning &amp; Execution  </li>
                 </ul>
-                </div>
+              </div>
+              <div class="skills-animation mt-4">
+                <h3>Key Achievements</h3>
+                  <ul class="contact-info list-unstyled">
+                    <li>Led 150+ software projects, consistently delivering 40% ahead of deadlines</li>
+                    <li>Trained 100+ team members on SaaS tools and IT platforms</li>
+                    <li>Improved client satisfaction by 10% across a portfolio of 20+ enterprise clients</li>
+                    <li>Successfully reduced manual editorial tasks by 70% through automation</li>
+                  </ul>
+              </div>
               </div>
             </div>
           </div>
