--- a/index.html
+++ b/index.html
@@ -453,7 +453,6 @@
 <!--      </div>
 
     </section><!-- /Skills Section -->
-
     <!-- Resume Section -->
     <section id="resume" class="resume section">
 
@@ -481,35 +480,105 @@
               <ul class="contact-info list-unstyled">
                 <li><i class="bi bi-geo-alt"></i>  Hyderabad, Telangana, India</li>
                 <li><i class="bi bi-envelope"></i>  royreema1997@gmail.com</li>
-                <li><i class="bi bi-phone"></i>  +919210481163</li>
+                <li><i class="bi bi-phone"></i>  +91 9210481163</li>
                 <li><i class="bi bi-linkedin"></i>  linkedin.com/in/iamreemaroy</li>
               </ul>
 
               <div class="skills-animation mt-4">
                 <h3>Core Competencies</h3>
-                  <ul class="contact-info list-unstyled">
-                    <li>SaaS Project &amp; Program Management (SDLC)</li>
-                    <li>Product Lifecycle &amp; Release Management </li>
-                    <li>Customer Success &amp; Retention Strategy </li>
-                    <li>Stakeholder &amp; Client Relationship Management</li>
-                    <li>Agile Delivery &amp; Sprint Planning</li>
-                    <li>Global Cross-Functional Team Leadership</li>
-                    <li>Platform Scalability &amp; Implementation</li>
-                    <li>Process Automation &amp; Operational Excellence</li>
-                    <li>Global Stakeholder Engagement</li>
-                    <li>Governance, Risk &amp; Compliance (GRC) Management</li>
-                    <li>Strategic Planning &amp; Execution  </li>
-                </ul>
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>SaaS Project & Program Management (SDLC)</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Product Lifecycle & Release Management</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Customer Success & Retention Strategy</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Stakeholder & Client Relationship Management</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Agile Delivery & Sprint Planning</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Global Cross-Functional Team Leadership</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Platform Scalability & Implementation</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Process Automation & Operational Excellence</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Global Stakeholder Engagement</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Governance, Risk & Compliance (GRC) Management</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Strategic Planning & Execution</span>
+                  </div>
+                </div>
               </div>
-              <div class="skills-animation mt-4">
+
+                <div class="skills-animation mt-4">
                 <h3>Key Achievements</h3>
-                  <ul class="contact-info list-unstyled">
-                    <li>Led 150+ software projects, consistently delivering 40% ahead of deadlines</li>
-                    <li>Trained 100+ team members on SaaS tools and IT platforms</li>
-                    <li>Improved client satisfaction by 10% across a portfolio of 20+ enterprise clients</li>
-                    <li>Successfully reduced manual editorial tasks by 70% through automation</li>
-                  </ul>
-              </div>
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Led 150+ software projects, consistently delivering 40% ahead of deadlines</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Trained 100+ team members on SaaS tools and IT platforms</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Improved client satisfaction by 10% across a portfolio of 20+ enterprise clients</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Successfully reduced manual editorial tasks by 70% through automation</span>
+                  </div>
+                </div>
+
               </div>
             </div>
           </div>
