--- a/index.html
+++ b/index.html
@@ -590,26 +590,48 @@
               <h3><i class="bi bi-briefcase me-2"></i>Professional Experience</h3>
 
               <div class="resume-item">
-                <h4>Senior Software Architect</h4>
-                <h5>2022 - Present</h5>
-                <p class="company"><i class="bi bi-building"></i> Tech Innovations Inc.</p>
+                <h4>Senior Manager</h4>
+                <h5>June 2025 - October 2025</h5>
+                <p class="company"><i class="bi bi-building"></i> BlinkCMS Corp Pvt Ltd (Previously Hocalwire Labs Pvt Ltd)</p>
                 <ul>
-                  <li>Lead the architectural design and implementation of enterprise-scale applications</li>
-                  <li>Mentor team of 12 developers and establish technical best practices</li>
-                  <li>Drive adoption of microservices architecture and cloud-native solutions</li>
-                  <li>Reduce system downtime by 75% through improved architecture and monitoring</li>
+                  <li>Spearheaded transformation projects to streamline B2B SaaS CMS operations across 5 departments including Product, Tech, Sales, and Support</li>
+                  <li>Introduced customer-first enhancements to CMS workflows, improving client engagement by 15%</li>
+                  <li>Collaborated with leadership on strategic initiatives to drive retention, compliance, and digital fulfillment readiness</li>
+                  <li>Enabled cross-team process standardization, resulting in a 25% improvement in resolution turnaround time</li>
+                  <li>Delivered scalable feature implementations across global publishing clients under tight deadlines</li>
                 </ul>
               </div>
 
               <div class="resume-item">
-                <h4>Lead Developer</h4>
-                <h5>2019 - 2022</h5>
-                <p class="company"><i class="bi bi-building"></i> Digital Solutions Corp.</p>
+                <h4>Senior Manager – Technical Support</h4>
+                <h5>April 2020 - May 2025</h5>
+                <p class="company"><i class="bi bi-building"></i> Hocalwire Labs Pvt Ltd</p>
                 <ul>
-                  <li>Spearheaded development of company's flagship product reaching 1M+ users</li>
-                  <li>Implemented CI/CD pipeline reducing deployment time by 60%</li>
-                  <li>Managed team of 8 developers across multiple projects</li>
-                  <li>Increased code test coverage from 45% to 90%</li>
+                  <li>Led a 35-member team across Product, QA, Tech, and Support to deliver enterprise CMS projects using Agile SDLC</li>
+                  <li>Orchestrated 70+ client onboarding and implementation projects under the Google News Initiative</li>
+                  <li>Automated core workflows and support processes, reducing manual effort by 70% and saving 100+ hours/month</li>
+                  <li>Drove customer-first innovation by launching Text-to-Speech (Amazon Polly, Google Console), improving accessibility</li>
+                  <li>Managed project budgeting, timeline control, and risk mitigation, reducing cost overruns by 20%</li>
+                </ul>
+              </div>
+              
+              <div class="resume-item">
+                <h4>Project Delivery Executive</h4>
+                <h5>October 2019 – March 2020</h5>
+                <p class="company"><i class="bi bi-building"></i>  Emotion Digital</p>
+                <ul>
+                  <li>Improved seller onboarding workflows by 30%, enhancing digital revenue streams</li>
+                  <li>Delivered training on WebERP systems and eCommerce back-end platforms to internal teams</li>
+                </ul>
+              </div>
+
+              <div class="resume-item">
+                <h4>Project Lead</h4>
+                <h5>April 2018 – October 2019</h5>
+                <p class="company"><i class="bi bi-building"></i>  Suntec Web Services Pvt Ltd</p>
+                <ul>
+                  <li>Led CRM optimization for UK clients, cutting support response time by 60%</li>
+                  <li>Designed and implemented data dashboards to support proactive decision-making</li>
                 </ul>
               </div>
             </div>
@@ -619,17 +641,15 @@
               <h3><i class="bi bi-mortarboard me-2"></i>Education</h3>
 
               <div class="resume-item">
-                <h4>Master of Science in Computer Science</h4>
+                <h4>Master’s in Public Administration</h4>
                 <h5>2017 - 2019</h5>
-                <p class="company"><i class="bi bi-building"></i> Stanford University</p>
-                <p>Specialized in Artificial Intelligence and Machine Learning. Graduated with honors.</p>
+                <p class="company"><i class="bi bi-building"></i>  Indira Gandhi National Open University - IGNOU</p>
               </div>
 
               <div class="resume-item">
-                <h4>Bachelor of Science in Software Engineering</h4>
-                <h5>2013 - 2017</h5>
-                <p class="company"><i class="bi bi-building"></i> MIT</p>
-                <p>Dean's List all semesters. Led university's coding club.</p>
+                <h4>Bachelor of Arts</h4>
+                <h5>2014 - 2017</h5>
+                <p class="company"><i class="bi bi-building"></i>  University of Delhi</p>
               </div>
             </div>
 
@@ -638,13 +658,13 @@
               <h3><i class="bi bi-award me-2"></i>Certifications</h3>
 
               <div class="resume-item">
-                <h4>AWS Certified Solutions Architect - Professional</h4>
-                <h5>2023</h5>
+                <h4>Career Essentials in Project Management | Microsoft and LinkedIn</h4>
+                <h5>2025</h5>
               </div>
 
               <div class="resume-item">
-                <h4>Google Cloud Professional Architect</h4>
-                <h5>2022</h5>
+                <h4>Project Management Skills for Leaders | LinkedIn</h4>
+                <h5>2025</h5>
               </div>
             </div>
           </div>
