--- a/index.html
+++ b/index.html
@@ -590,6 +590,27 @@
               <h3><i class="bi bi-briefcase me-2"></i>Professional Experience</h3>
 
               <div class="resume-item">
+                <h4>Technical Project Manager</h4>
+                <h5>November 2025 – Present</h5>
+                <p class="company"><i class="bi bi-building"></i> Enfec Solutions</p>
+                <ul>
+                  <li>Technical Project Manager leading delivery of Eskeon, a SaaS-based EdTech learning platform built for students and educational institutions, with a core focus on real-time live learning and job readiness</li>
+                  <li>Took ownership of a platform under development for 1.5+ years and realigned product, delivery, and execution within 2 months, establishing clear ownership, workflows, and delivery governance
+                  <li>Managing a 25-member cross-functional team including UX Designers, UI Designers, Animators, Content Creators, Backend Developers, and QA Engineers</li>
+                  <li>Defined and executed delivery roadmap, sprint structure, role clarity, and prioritization, enabling teams to transition from stalled execution to active, predictable delivery</li>
+                  <li>Successfully delivered Admin Dashboard and Student Dashboard within 2 months of joining, preparing the platform for internal go-live in February (Week 1)</li>
+                  <li>Driving Agile/Scrum delivery across the full SDLC, including Sprint Planning, Daily Standups, Backlog Grooming, Sprint Reviews, Retrospectives, and Release Planning</li>
+                  <li>Partnering with founders, leadership, and stakeholders to translate business vision into executable product milestones and delivery timelines</li>
+                  <li>Overseeing platform development for live instructor-led sessions, course management, learner engagement, and institutional use cases</li>
+                  <li>Currently supporting 3 live-ready courses: Android Development, Java, Python with Generative AI, designed to align with current industry demand and high-paying job roles</li>
+                  <li>Ensuring platform readiness for scalable live sessions, learner onboarding, content delivery, and administrative control</li>
+                  <li>Acting as the single point of accountability for delivery, risk management, dependency tracking, and cross-team coordination</li>
+                  <li>Established process discipline, delivery cadence, and execution transparency, enabling teams to move from prolonged development to production readiness</li>
+                  <li>Focused on delivering a career-oriented learning experience aimed at interview readiness, practical skills, and employability outcomes</li>
+                </ul>
+              </div>
+              
+              <div class="resume-item">
                 <h4>Senior Manager</h4>
                 <h5>June 2025 - October 2025</h5>
                 <p class="company"><i class="bi bi-building"></i> BlinkCMS Corp Pvt Ltd (Previously Hocalwire Labs Pvt Ltd)</p>
