--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Photography</span>
-                        <h4>Capturing Moments</h4>
+                        <h4>Deccan Chronicle – Digital Transformation</h4>
                         <div class="portfolio-links">
                           <a href="assets/img/portfolio/portfolio-portrait-1.webp" class="glightbox" title="Capturing Moments"><i class="bi bi-plus-lg"></i></a>
                           <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
@@ -746,7 +746,7 @@
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Web Design</span>
-                        <h4>Woodcraft Design</h4>
+                        <h4>MMR Real Estate</h4>
                         <div class="portfolio-links">
                           <a href="assets/img/portfolio/portfolio-2.webp" class="glightbox" title="Woodcraft Design"><i class="bi bi-plus-lg"></i></a>
                           <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
@@ -762,7 +762,7 @@
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Automotive</span>
-                        <h4>Classic Beauty</h4>
+                        <h4>HPBL News</h4>
                         <div class="portfolio-links">
                           <a href="assets/img/portfolio/portfolio-portrait-2.webp" class="glightbox" title="Classic Beauty"><i class="bi bi-plus-lg"></i></a>
                           <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
@@ -778,41 +778,9 @@
                     <div class="portfolio-info">
                       <div class="content">
                         <span class="category">Nature</span>
-                        <h4>Natural Growth</h4>
+                        <h4>NCR Today</h4>
                         <div class="portfolio-links">
                           <a href="assets/img/portfolio/portfolio-portrait-4.webp" class="glightbox" title="Natural Growth"><i class="bi bi-plus-lg"></i></a>
-                          <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-photography">
-                  <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
-                    <div class="portfolio-info">
-                      <div class="content">
-                        <span class="category">Photography</span>
-                        <h4>Urban Stories</h4>
-                        <div class="portfolio-links">
-                          <a href="assets/img/portfolio/portfolio-5.webp" class="glightbox" title="Urban Stories"><i class="bi bi-plus-lg"></i></a>
-                          <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div><!-- End Portfolio Item -->
-
-                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-design">
-                  <div class="portfolio-wrap">
-                    <img src="assets/img/portfolio/portfolio-6.webp" class="img-fluid" alt="Portfolio Image" loading="lazy">
-                    <div class="portfolio-info">
-                      <div class="content">
-                        <span class="category">Web Design</span>
-                        <h4>Digital Experience</h4>
-                        <div class="portfolio-links">
-                          <a href="assets/img/portfolio/portfolio-6.webp" class="glightbox" title="Digital Experience"><i class="bi bi-plus-lg"></i></a>
                           <a href="portfolio-details.html" title="More Details"><i class="bi bi-arrow-right"></i></a>
                         </div>
                       </div>
