--- a/index.html
+++ b/index.html
@@ -814,8 +814,8 @@
             <div class="col-lg-8 col-md-12">
               <div class="service-intro">
                 <h2 class="service-heading">
-                  <div>Innovative business</div>
-                  <div><span>performance solutions</span></div>
+                  <div>Comprehensive IT Services</div>
+                  <div><span>to Elevate Your Business</span></div>
                 </h2>
               </div>
             </div>
@@ -844,11 +844,11 @@
               </a>
               <h3>
                 <a href="service-details.html">
-                  Creative <span>branding</span>
+                  Website <span>Development</span>
                 </a>
               </h3>
               <p>
-                Nulla facilisi. Maecenas eget magna neque. Suspendisse potenti. Curabitur eleifend nisi non magna vulputate, vel condimentum libero tempus. Proin consectetur feugiat diam.
+                Custom-built websites for businesses and individuals, designed for performance, scalability, and user engagement.
               </p>
             </div>
           </div>
