--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <a href="https://www.youtube.com/@iamreemaroy" class="google-plus"><i class="bi bi-youtube"></i></a>
         <a href="https://www.instagram.com/iamreemaroyy" class="instagram"><i class="bi bi-instagram"></i></a>
         <a href="https://x.com/iamreemaroy" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="https://linktr.ee/iamreemaroy" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://linktr.ee/iamreemaroy" class="facebook"><i class="bi bi-cart4"></i></a>
       </div>
 
     </div>
@@ -1098,8 +1098,7 @@
                 </div>
                 <div class="content">
                   <h4>Our Location</h4>
-                  <p>A108 Adam Street</p>
-                  <p>New York, NY 535022</p>
+                  <p>Hyderabad, Telangana, India</p>
                 </div>
               </div>
 
@@ -1109,8 +1108,7 @@
                 </div>
                 <div class="content">
                   <h4>Phone Number</h4>
-                  <p>+1 5589 55488 55</p>
-                  <p>+1 6678 254445 41</p>
+                  <p>+91 9210481163</p>
                 </div>
               </div>
 
@@ -1120,8 +1118,7 @@
                 </div>
                 <div class="content">
                   <h4>Email Address</h4>
-                  <p>info@example.com</p>
-                  <p>contact@example.com</p>
+                  <p>royreema1997@gmail.com</p>
                 </div>
               </div>
             </div>
@@ -1177,14 +1174,7 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> | <a href="https://bootstrapmade.com/tools/">DevTools</a>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Reema Roy</strong> <span>All Rights Reserved</span></p>
       </div>
     </div>
 
