--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
               <div class="profile-content">
                 <h3>Reema Roy</h3>
-                <p class="profession">Project Manager and Content Creator</p>
+                <p class="profession">Project Manager & Content Creator</p>
 
                 <div class="contact-links">
                   <a href="mailto:marcus@example.com" class="contact-item">
