--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                 <h2>Passionate About Creating Digital Experiences</h2>
               </div>
 
-              <div class="description">
+              <div class="description" style="padding-left: 10px;padding-right: 10px;">
                 <p>I am a Technical Project Manager with 5+ years of experience leading SaaS, ERP, and CMS projects — from discovery to launch — while aligning product, engineering, and business teams.</p>
                 <p>Currently, I am leading end-to-end delivery initiatives in EdTech, working closely with cross-functional teams (UX, development, content, QA) to build scalable learning platforms that improve student and organization outcomes.</p>
                 <p>My strength lies in converting complex, unclear requirements into structured roadmaps — ensuring faster delivery, measurable impact, and seamless adoption.</p>
