--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="about-content">
               <div class="section-header">
                 <span class="badge-text">Get to Know Me</span>
-                <h2>Passionate About Creating Digital Experiences</h2>
+                <h2 style="padding-left: 10px;padding-right: 10px;">Passionate About Creating Digital Experiences</h2>
               </div>
 
               <div class="description" style="padding-left: 10px;padding-right: 10px;">
@@ -268,7 +268,7 @@
                 </div>
               </div>
 
-              <div class="details-grid">
+              <div class="details-grid" style="padding-left: 10px;padding-right: 10px;">
                 <div class="detail-row">
                   <div class="detail-item">
                     <span class="detail-label">Specialization</span>
@@ -291,7 +291,7 @@
                 </div>
               </div>
 
-              <div class="cta-section">
+              <div class="cta-section" style="padding-left: 10px;padding-right: 10px;">
                 <a href="#" class="btn btn-primary">
                   <i class="bi bi-download"></i>
                   Download Resume
