--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
     <section id="resume" class="resume section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+      <div class="container section-title" data-aos="fade-up" style="padding-left: 10px;padding-right: 10px;">
         <h2>Resume</h2>
         <p>Technical Project Manager | 5+ Years in SaaS Delivery | Leading Cross-Functional Teams | ERP/CMS Implementations | Driving Delivery & Adoption</p>
       </div><!-- End Section Title -->
@@ -467,7 +467,7 @@
         <div class="row gy-4">
           <!-- Left column with summary and contact -->
           <div class="col-lg-4">
-            <div class="resume-side" data-aos="fade-right" data-aos-delay="100">
+            <div class="resume-side" data-aos="fade-right" data-aos-delay="100" style="padding-left: 10px;padding-right: 10px;">
               <div class="profile-img mb-4">
                 <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
               </div>
