--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                   </a>
                   <a href="#" class="contact-item">
                     <i class="bi bi-geo-alt"></i>
-                    Hyderabad, Telangana, India
+                    Hyderabad, TG, India
                   </a>
                 </div>
               </div>
@@ -478,7 +478,7 @@
 
               <h3 class="mt-4">Contact Information</h3>
               <ul class="contact-info list-unstyled">
-                <li><i class="bi bi-geo-alt"></i>  Hyderabad, Telangana, India</li>
+                <li><i class="bi bi-geo-alt"></i>  Hyderabad, TG, India</li>
                 <li><i class="bi bi-envelope"></i>  royreema1997@gmail.com</li>
                 <li><i class="bi bi-phone"></i>  +91 9210481163</li>
                 <li><i class="bi bi-linkedin"></i>  linkedin.com/in/iamreemaroy</li>
@@ -1098,7 +1098,7 @@
                 </div>
                 <div class="content">
                   <h4>Our Location</h4>
-                  <p>Hyderabad, Telangana, India</p>
+                  <p>Hyderabad, TG, India</p>
                 </div>
               </div>
 
