--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <div class="detail-row">
                   <div class="detail-item">
                     <span class="detail-label">Education</span>
-                    <span class="detail-value">Master of Public Administration, IGNOU</span>
+                    <span class="detail-value">Master of Public Administration</span>
                   </div>
                   <div class="detail-item">
                     <span class="detail-label">Languages</span>
@@ -579,6 +579,24 @@
                   </div>
                 </div>
 
+                <div class="skills-animation mt-4">
+                <i class="bi bi-mortarboard me-2"></i><h3>Education</h3>
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Master’s in Public Administration</span>
+                    <span>2017 - 2019</span>
+                    <i class="bi bi-building"></i><span>Indira Gandhi National Open University - IGNOU</span>
+                  </div>
+                </div>
+
+                <div class="skill-item">
+                  <div class="d-flex justify-content-between">
+                    <span>Bachelor of Arts</span>
+                    <span>2014 - 2017</span>
+                    <i class="bi bi-building"></i><span>University of Delhi</span>
+                  </div>
+                </div>
+              </div>
               </div>
             </div>
           </div>
