--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
               <div class="hero-text">
                 <h1>Reema<span class="accent-text">Roy</span></h1>
                 <p class="lead">I'm a <span class="typed" data-typed-items="Technical Project Manager, IT Consultant, Website Developer, Digital Creator"></span></p>
-                <p class="description">Helping businesses scale with secure IT solutions
-                <br>& helping people discover smarter tech, skincare & travel choices.</p>
+                <p class="description">I help businesses build, migrate, and manage websites while delivering
+                <br>projects with clarity, structure, and performance.</p>
                 
 
                 <div class="hero-actions">
-                  <a href="#contact" class="btn btn-primary">Hire Me for IT Services</a>
-                  <a href="#blogs" class="btn btn-outline">Explore Blogs</a>
+                  <a href="/services" class="btn btn-primary">Work With Me</a>
+                  <a href="/resume" class="btn btn-outline">View Experience</a>
                 </div>
 
                 <div class="social-links">
