--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
     </section><!-- /Featured Section -->
 
-    <!-- Stats Section -->
+    <!-- Projects Section -->
     <section id="stats" class="stats section light-background">
       <div class="container section-title aos-init aos-animate" data-aos="fade-up">
         <h2>Projects</h2>
@@ -228,7 +228,6 @@
                 <div class="icon-wrapper">
                   <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
                 </div>
-                <span data-purecounter-start="0" data-purecounter-duration="1" class="purecounter"></span>
                 <p>HPBL News | Data Migration</p>
               </div><!-- End Stats Item -->
 
@@ -236,7 +235,6 @@
                 <div class="icon-wrapper">
                   <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
                 </div>
-                <span data-purecounter-start="0" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Mystic Mansion Realty | Website Development</p>
               </div><!-- End Stats Item -->
 
@@ -244,7 +242,6 @@
                 <div class="icon-wrapper">
                   <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
                 </div>
-                <span data-purecounter-start="0" data-purecounter-duration="1" class="purecounter"></span>
                 <p>The Oorza | Website Development</p>
               </div><!-- End Stats Item -->
 
@@ -252,7 +249,6 @@
                 <div class="icon-wrapper">
                   <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
                 </div>
-                <span data-purecounter-start="0" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Hocalwire | Platform Consultancy</p>
               </div><!-- End Stats Item -->
             </div>
@@ -261,7 +257,7 @@
 
       </div>
 
-    </section><!-- /Stats Section -->
+    </section><!-- /Projects Section -->
     
     
     <!-- About Section -->
