--- a/index.html
+++ b/index.html
@@ -228,28 +228,32 @@
                 <div class="icon-wrapper">
                   <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
                 </div>
-                <p>HPBL News | Data Migration</p>
+                <h4>HPBL News</h4>
+                <h5>Data Migration</h5>
               </div><!-- End Stats Item -->
 
               <div class="stats-item" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-wrapper">
                   <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
                 </div>
-                <p>Mystic Mansion Realty | Website Development</p>
+                <h4>Mystic Mansion Realty </h4>
+                <h5>Website Development</h5>
               </div><!-- End Stats Item -->
 
               <div class="stats-item" data-aos="zoom-in" data-aos-delay="250">
                 <div class="icon-wrapper">
                   <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
                 </div>
-                <p>The Oorza | Website Development</p>
+                <h4>The Oorza</h4>
+                <h5>Website Development</h5>
               </div><!-- End Stats Item -->
 
               <div class="stats-item" data-aos="zoom-in" data-aos-delay="300">
                 <div class="icon-wrapper">
                   <img src="assets/img/profile/profile-square-2.webp" alt="Profile" class="img-fluid rounded">
                 </div>
-                <p>Hocalwire | Platform Consultancy</p>
+                <h4>Hocalwire</h4>
+                <h5>Platform Consultancy</h5>
               </div><!-- End Stats Item -->
             </div>
           </div>
