--- a/index.html
+++ b/index.html
@@ -391,78 +391,22 @@
           <div class="col-lg-7" data-aos="fade-left" data-aos-delay="300">
             <div class="about-content">
               <div class="section-header">
-                <span class="badge-text">Get to Know Me</span>
-                <h2 style="padding-left: 12px;padding-right: 12px;">Passionate About Creating Digital Experiences</h2>
+                <h2 style="padding-left: 12px;padding-right: 12px;">LinkedIn recommendations</h2>
               </div>
 
               <div class="description" style="padding-left: 12px;padding-right: 12px;">
-                <p>I am a Technical Project Manager with 5+ years of experience leading SaaS, ERP, and CMS projects — from discovery to launch — while aligning product, engineering, and business teams.</p>
-                <p>Currently, I am leading end-to-end delivery initiatives in EdTech, working closely with cross-functional teams (UX, development, content, QA) to build scalable learning platforms that improve student and organization outcomes.</p>
-                <p>My strength lies in converting complex, unclear requirements into structured roadmaps — ensuring faster delivery, measurable impact, and seamless adoption.</p>
-                <p>What I bring:
-                  <li>Project planning, sprint management & stakeholder communication</li>
-                  <li>Onboarding, implementation & process standardization</li>
-                  <li>Team leadership across engineering, UX, and content streams</li>
-                  <li>Data-driven decisions, risk control, and delivery accountability</li>
-                </p>
-                <p>Career Highlights:
-                  <li>Successfully managed multiple ERP/CMS rollouts and onboarding programs</li>
-                  <li>Led cross-functional teams and improved operational efficiency</li>
-                  <li>Built processes that reduced training and delivery cycles</li>
-                </p>
-                <p>I’m passionate about building digital solutions that scale — especially in media, education, SaaS, and product environments.</p>
-                <p>Always open to learning, collaborating, and contributing to impactful technology initiatives.</p>
-                
+                <p>Reema has worked with Hocalwire for more than 4 years and she has contributed to the growth of organization in commendable manner.
+                <br>She started her career as an executed and climbed the lader to become Sr Manager in mere few years was applaudable.
+                <br>She has handled significant parallel projects and team and develivered beyond expectation.    
+                <br>She was great at managing support team as well as front facing the clients.                    
+                <br>I wish her all the very best for all her future endeavours.</p>
               </div>
-
-              <div class="stats-grid">
-                <div class="stat-item">
-                  <div class="stat-number">180+</div>
-                  <div class="stat-label">Projects Completed</div>
-                </div>
-                <div class="stat-item">
-                  <div class="stat-number">5+</div>
-                  <div class="stat-label">Years Experience</div>
-                </div>
-                <div class="stat-item">
-                  <div class="stat-number">98%</div>
-                  <div class="stat-label">Client Satisfaction</div>
-                </div>
-              </div>
-
-              <div class="details-grid" style="padding-left: 12px;padding-right: 12px;">
-                <div class="detail-row">
-                  <div class="detail-item">
-                    <span class="detail-label">Specialization</span>
-                    <span class="detail-value">Project Management & Development</span>
-                  </div>
-                  <div class="detail-item">
-                    <span class="detail-label">Experience Level</span>
-                    <span class="detail-value">Senior Professional</span>
-                  </div>
-                </div>
-                <div class="detail-row">
-                  <div class="detail-item">
-                    <span class="detail-label">Education</span>
-                    <span class="detail-value">Master of Public Administration</span>
-                  </div>
-                  <div class="detail-item">
-                    <span class="detail-label">Languages</span>
-                    <span class="detail-value">English, Hindi</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="cta-section" style="padding-left: 12px;padding-right: 12px;">
-                <a href="#" class="btn btn-primary">
-                  <i class="bi bi-download"></i>
-                  Download Resume
-                </a>
-                <a href="#" class="btn btn-outline">
-                  <i class="bi bi-chat-dots"></i>
-                  Let's Talk
-                </a>
-              </div>
+              <div class="description" style="padding-left: 12px;padding-right: 12px;">
+                <p>I had the pleasure of working closely with Reema on the development of news9live.com, and I can confidently say that her contributions were crucial to the project’s success. From the start to the end of the full project lifecycle, she was deeply involved in every key aspect.
+</p>
+                <p>Reema demonstrated an exceptional ability to navigate complex challenges and consistently delivered high-quality work. Her expertise and dedication were evident as we worked through feedback cycles and iterative improvements to refine the site. She also played a pivotal role in training the editorial team, ensuring a smooth transition to the new platform.
+</p>
+                <p>Her problem-solving skills, attention to detail, and collaborative spirit made her an invaluable team member throughout the entire process. I would highly recommend Reema for any future projects, as she is not only skilled but also a pleasure to work with.</p>
             </div>
           </div>
         </div>
