--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 </div>
                 <div class="client-details">
                   <h3>Mystic Mansion Realty</h3>
-                  <span class="Founder</span>
+                  <span class="position">Founder</span>
                 </div>
               </div>
             </div>
