--- a/index.html
+++ b/index.html
@@ -379,10 +379,13 @@
           <div class="col-lg-7" data-aos="fade-left" data-aos-delay="300">
             <div class="about-content">
               <div class="section-header">
-                <h2 style="padding-left: 12px;padding-right: 12px;">LinkedIn recommendations</h2>
+                <span class="badge-text">Get to Know Me</span>
               </div>
 
               <div class="description" style="padding-left: 12px;padding-right: 12px;">
+                <h4>
+                  Ashwani Mishra | Co-Founder & CEO | BlinkCMS & Hocalwire
+                </h4>
                 <p>Reema has worked with Hocalwire for more than 4 years and she has contributed to the growth of organization in commendable manner.
                 <br>She started her career as an executed and climbed the lader to become Sr Manager in mere few years was applaudable.
                 <br>She has handled significant parallel projects and team and develivered beyond expectation.    
@@ -390,6 +393,9 @@
                 <br>I wish her all the very best for all her future endeavours.</p>
               </div>
               <div class="description" style="padding-left: 12px;padding-right: 12px;">
+                <h4>
+                  Praveen Kumar Sahu | Product Lead – Platform, Growth & Monetization | TV9
+                </h4>
                 <p>I had the pleasure of working closely with Reema on the development of news9live.com, and I can confidently say that her contributions were crucial to the project’s success. From the start to the end of the full project lifecycle, she was deeply involved in every key aspect.
 </p>
                 <p>Reema demonstrated an exceptional ability to navigate complex challenges and consistently delivered high-quality work. Her expertise and dedication were evident as we worked through feedback cycles and iterative improvements to refine the site. She also played a pivotal role in training the editorial team, ensuring a smooth transition to the new platform.
