--- a/about.html
+++ b/about.html
@@ -117,6 +117,14 @@
                     <i class="bi bi-geo-alt"></i>
                     Hyderabad, TG, India
                   </a>
+                  <a href="#" class="contact-item">
+                    <i class="bi bi-bar-chart"></i>
+                    7+ Years
+                  </a>
+                  <a href="#" class="contact-item">
+                    <i class="bi bi-book-half"></i>
+                    Domain i worked for : IT Product & Services, Media, Education
+                  </a>
                 </div>
               </div>
             </div>
