--- a/resume.html
+++ b/resume.html
@@ -324,6 +324,19 @@
         </div>
 
       </div>
+      <a href="Reema-Roy-Resume.pdf" download="" class="resume-download-btn" style="
+          margin-left: 600px;margin-right: 600px;
+          display: inline-block;
+          padding: 12px 22px;
+          background-color: #111;
+          color: #fff;
+          text-decoration: none;
+          font-weight: 600;
+          border-radius: 6px;
+          transition: all 0.2s ease;
+          background-color: #333;"
+        >
+        Download Resume</a>
 
     </section><!-- /Resume Section -->
 
