--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                   </a>
                   <a href="#" class="contact-item">
                     <i class="bi bi-book-half"></i>
-                    Domain i worked for : IT Product & Services, Media, Education
+                    IT Product & Services, Media & Education
                   </a>
                 </div>
               </div>
