--- a/resume.html
+++ b/resume.html
@@ -325,9 +325,10 @@
 
       </div>
       <a href="Reema-Roy-Resume.pdf" download="" class="resume-download-btn" style="
-          margin-left: 600px;margin-right: 600px;
+          margin-left: 550px;
+          margin-right: 550px;
           display: inline-block;
-          padding: 12px 22px;
+          padding: 12px 12px;
           background-color: #111;
           color: #fff;
           text-decoration: none;
@@ -337,6 +338,14 @@
           background-color: #333;"
         >
         Download Resume</a>
+
+      <style>
+        @media screen and (max-width: 600px) {
+          a.resume-download-btn {
+                display: flow !important;
+          }
+        }
+        </style>
 
     </section><!-- /Resume Section -->
 
