--- a/resume.html
+++ b/resume.html
@@ -343,6 +343,10 @@
         @media screen and (max-width: 600px) {
           a.resume-download-btn {
                 display: flow !important;
+                text-align: center;
+                margin-left: auto;
+                margin-right: auto;
+            
           }
         }
         </style>
