--- a/resume.html
+++ b/resume.html
@@ -344,8 +344,8 @@
           a.resume-download-btn {
                 display: flow !important;
                 text-align: center;
-                margin-left: auto;
-                margin-right: auto;
+                margin-left: auto !important;
+                margin-right: auto !important;
             
           }
         }
