--- a/index.html
+++ b/index.html
@@ -415,19 +415,19 @@
                 <h4>
                   Ashwani Mishra | Co-Founder & CEO | BlinkCMS & Hocalwire
                 </h4>
-                <blockquote>Reema has worked with Hocalwire for more than 4 years and she has contributed to the growth of organization in commendable manner.
+                <p><q>Reema has worked with Hocalwire for more than 4 years and she has contributed to the growth of organization in commendable manner.
                 <br>She started her career as an executed and climbed the lader to become Sr Manager in mere few years was applaudable.
                 <br>She has handled significant parallel projects and team and develivered beyond expectation.    
                 <br>She was great at managing support team as well as front facing the clients.                    
-                <br>I wish her all the very best for all her future endeavours.</blockquote>
+                <br>I wish her all the very best for all her future endeavours.</q></p>
               </div>
               <div class="description" style="padding-left: 12px;padding-right: 12px;">
                 <h4>
                   Praveen Kumar Sahu | Product Lead – Platform, Growth & Monetization | TV9
                 </h4>
-                <blockquote>I had the pleasure of working closely with Reema on the development of news9live.com, and I can confidently say that her contributions were crucial to the project’s success. From the start to the end of the full project lifecycle, she was deeply involved in every key aspect.
+                <p><q>I had the pleasure of working closely with Reema on the development of news9live.com, and I can confidently say that her contributions were crucial to the project’s success. From the start to the end of the full project lifecycle, she was deeply involved in every key aspect.
                 <br>Reema demonstrated an exceptional ability to navigate complex challenges and consistently delivered high-quality work. Her expertise and dedication were evident as we worked through feedback cycles and iterative improvements to refine the site. She also played a pivotal role in training the editorial team, ensuring a smooth transition to the new platform.
-                <br>Her problem-solving skills, attention to detail, and collaborative spirit made her an invaluable team member throughout the entire process. I would highly recommend Reema for any future projects, as she is not only skilled but also a pleasure to work with.</blockquote>
+                <br>Her problem-solving skills, attention to detail, and collaborative spirit made her an invaluable team member throughout the entire process. I would highly recommend Reema for any future projects, as she is not only skilled but also a pleasure to work with.</q></p>
             </div>
           </div>
         </div>
